--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+body {
+    margin: 0 auto;
+    width: 960px;
+    height: 100vh;
+    background-color: antiquewhite;
+}
+
+
